WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35542
[Qt] QtLauncher is not respecting class variable names
https://bugs.webkit.org/show_bug.cgi?id=35542
Summary
[Qt] QtLauncher is not respecting class variable names
Jesus Sanchez-Palencia
Reported
2010-03-01 13:42:45 PST
Need to add 'm_' to LauncherWindow variables names.
Attachments
Fix m_ on variables names
(13.43 KB, patch)
2010-03-01 14:08 PST
,
Jesus Sanchez-Palencia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jesus Sanchez-Palencia
Comment 1
2010-03-01 14:08:00 PST
Created
attachment 49750
[details]
Fix m_ on variables names
WebKit Commit Bot
Comment 2
2010-03-02 11:59:10 PST
Comment on
attachment 49750
[details]
Fix m_ on variables names Rejecting patch 49750 from commit-queue. Failed to run "['/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/svn-apply', '--reviewer', 'Simon Hausmann', '--force']" exit_code: 1 Last 500 characters of output: -35 lines). Hunk #6 succeeded at 311 (offset -35 lines). Hunk #7 succeeded at 325 (offset -35 lines). Hunk #8 succeeded at 361 (offset -35 lines). Hunk #9 succeeded at 419 (offset -35 lines). Hunk #10 succeeded at 458 (offset -35 lines). Hunk #11 succeeded at 491 with fuzz 2 (offset -30 lines). Hunk #12 succeeded at 558 (offset -28 lines). Hunk #13 succeeded at 574 (offset -28 lines). Hunk #14 FAILED at 603. 3 out of 14 hunks FAILED -- saving rejects to file WebKitTools/QtLauncher/main.cpp.rej Full output:
http://webkit-commit-queue.appspot.com/results/321969
Jesus Sanchez-Palencia
Comment 3
2010-03-02 12:06:06 PST
This should only be committed after the patch on
https://bugs.webkit.org/show_bug.cgi?id=35536
which is waiting review...
Jesus Sanchez-Palencia
Comment 4
2010-03-03 08:05:10 PST
Comment on
attachment 49750
[details]
Fix m_ on variables names No we can commit this...
WebKit Commit Bot
Comment 5
2010-03-03 19:14:04 PST
Comment on
attachment 49750
[details]
Fix m_ on variables names Clearing flags on attachment: 49750 Committed
r55498
: <
http://trac.webkit.org/changeset/55498
>
WebKit Commit Bot
Comment 6
2010-03-03 19:14:08 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug