2010-03-03  Jesus Sanchez-Palencia  <jesus.palencia@openbossa.org>

Reviewed by Simon Hausmann.

        Add a missing 'm_' to class variables names.

        [Qt] QtLauncher is not respecting class variable names
        https://bugs.webkit.org/show_bug.cgi?id=35542

        * QtLauncher/main.cpp:
        (LauncherWindow::LauncherWindow):
        (LauncherWindow::init):
        (LauncherWindow::sendTouchEvent):
        (LauncherWindow::eventFilter):
        (LauncherWindow::zoomIn):
        (LauncherWindow::zoomOut):
        (LauncherWindow::resetZoom):
        (LauncherWindow::setEditable):
        (LauncherWindow::setTouchMocking):
        (LauncherWindow::initializeView):
        (LauncherWindow::createChrome):

Canonical link: https://commits.webkit.org/46795@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55498 268f45cc-cd09-0410-ab3c-d52691b4dbfc